[project]
name = "to-do-list-flask"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.1",
    "flask-cors>=6.0.0",
    "flask-sqlalchemy>=3.1.1",
    "pytest>=8.3.5",
    "requests>=2.32.3",
    "werkzeug>=3.1.3",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.10",
    "taskipy>=1.14.1",
]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']
ignore = ['E402', 'F811']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.taskipy.tasks]
lint= {cmd = "uv run ruff check . && uv run ruff check . --diff"}
format = {cmd = "uv run ruff check . --fix && uv run ruff format ."}
